support java module