@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.30</version>
+            <version>1.18.36</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.4.5</version>
+            <version>1.5.16</version>
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
@@ -153,28 +153,27 @@
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <release>17</release>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.36</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
-            <!--      <plugin>-->
-            <!--        <groupId>org.apache.maven.plugins</groupId>-->
-            <!--        <artifactId>maven-shade-plugin</artifactId>-->
-            <!--        <version>3.2.4</version>-->
-            <!--        <executions>-->
-            <!--          <execution>-->
-            <!--            <phase>package</phase>-->
-            <!--            <goals>-->
-            <!--              <goal>shade</goal>-->
-            <!--            </goals>-->
-            <!--            <configuration>-->
-            <!--              <transformers>-->
-            <!--                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
-            <!--                  <mainClass>io.github.colinzhu.taskqueue.example.old.DummyCheckServer</mainClass>-->
-            <!--                </transformer>-->
-            <!--              </transformers>-->
-            <!--            </configuration>-->
-            <!--          </execution>-->
-            <!--        </executions>-->
-            <!--      </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.2</version>
+                <configuration>
+                    <argLine>
+                        --add-modules ALL-MODULE-PATH
+                        --add-opens io.github.colinzhu.taskqueue/io.github.colinzhu.taskqueue.example=com.fasterxml.jackson.databind
+                    </argLine>
+                    <useModulePath>true</useModulePath>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
